--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,14 @@ project(PDSProjectServer)
 
 set(CMAKE_CXX_STANDARD 17)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread" )
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/usr/include/cppconn")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L/usr/lib -lmysqlcppconn")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/opt/boost_1_74_0")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/opt/boost_1_74_0/stage/lib")
+set(/usr/include/cppconn /usr/lib)
+include_directories(${FULL_PATH_TO_MYSQL_CONNECTOR_CPP_DIR}/include)
+link_directories(${FULL_PATH_TO_MYSQL_CONNECTOR_CPP_DIR}/lib)
 add_executable(PDSProjectServer main.cpp)
+target_link_libraries(PDSProjectServer  mysqlcppconn)
+target_compile_features(PDSProjectServer PRIVATE cxx_range_for)
