First example of Singleton Pattern of Server This Singleton Pattern is modified for multi threading. It should be safe for this purpose.
Little example in main.cpp

NEW: Database classes that connects to database, if a second thread comes, database doesn't connect twice

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/opt/boost_1_74_0/stage/lib")
 set(/usr/include/cppconn /usr/lib)
 include_directories(${FULL_PATH_TO_MYSQL_CONNECTOR_CPP_DIR}/include)
 link_directories(${FULL_PATH_TO_MYSQL_CONNECTOR_CPP_DIR}/lib)
-add_executable(PDSProjectServer main.cpp Server.cpp)
+add_executable(PDSProjectServer main.cpp Server.cpp Database.cpp)
 target_link_libraries(PDSProjectServer  mysqlcppconn)
 target_compile_features(PDSProjectServer PRIVATE cxx_range_for)
