--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,12 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread" )
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L/usr/lib -lmysqlcppconn")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/opt/boost_1_74_0")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/opt/boost_1_74_0/stage/lib")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/usr/local/include")
 set(/usr/include/cppconn /usr/lib)
 include_directories(${FULL_PATH_TO_MYSQL_CONNECTOR_CPP_DIR}/include)
 link_directories(${FULL_PATH_TO_MYSQL_CONNECTOR_CPP_DIR}/lib)
+link_directories(/lib/x86_64-linux-gnu)
+link_libraries(libsodium.a)
 add_executable(PDSProjectServer main.cpp Server.cpp Database.cpp SocketWrap.cpp)
 target_link_libraries(PDSProjectServer  mysqlcppconn)
 target_compile_features(PDSProjectServer PRIVATE cxx_range_for)
