filewatcher create work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,6 @@ link_directories(/lib/x86_64-linux-gnu)
 link_libraries(libsodium.a)
 link_directories(/usr/lib)
 link_libraries(libboost_filesystem.a)
-add_executable(PDSProjectServer main.cpp Server.cpp Database.cpp SocketWrap.cpp Checksum.h)
+add_executable(PDSProjectServer main.cpp Server.cpp Database.cpp SocketWrap.cpp)
 target_link_libraries(PDSProjectServer  mysqlcppconn)
 target_compile_features(PDSProjectServer PRIVATE cxx_range_for)
